name:              gitit2
version:           0.0.0
license:           GPL
license-file:      LICENSE
author:            John MacFarlane
maintainer:        John MacFarlane
synopsis:          Next-generation version of gitit wiki server.
description:       A reimplementation of gitit in Yesod.  This is
                   a work in progress: many of gitit's features
                   are not yet implemented.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://gitit.net
data-files:        README.markdown
                   messages/en.msg
                   static/favicon.ico
                   static/robots.txt
                   static/js/bootstrap.min.js
                   static/js/jquery-1.7.2.min.js
                   static/js/jquery-ui-1.8.21.custom.min.js
                   static/img/logo.png
                   static/img/icons/feed.png
                   static/img/icons/folder.png
                   static/img/icons/page.png
                   static/img/glyphicons-halflings.png
                   static/img/glyphicons-halflings-white.png
                   static/css/custom.css
                   static/css/bootstrap.min.css
                   static/css/hk-pyg.css
                   static/css/print.css
                   static/css/screen.css
                   settings.yaml
                   data/FrontPage.page
                   data/Help.page
                   data/markup.Markdown
                   data/markup.RST
                   data/markup.HTML
                   data/markup.LaTeX
                   data/post-update

flag executable
  description:   Build the gitit executable.
  default:       True

library
    exposed-modules: Network.Gitit2
                     Network.Gitit2.Routes
                     Network.Gitit2.WikiPage
                     Network.Gitit2.Page
    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

    build-depends: base                          >= 4          && < 5
                 -- , yesod-platform                >= 1.1        && < 1.2
                 , yesod                         >= 1.2        && < 1.5
                 , yesod-static                  >= 1.2        && < 1.5
                 , yesod-core                    >= 1.2        && < 1.5
                 , yesod-form                    >= 1.3        && < 1.5
                 , bytestring                    >= 0.9        && < 0.11
                 , clientsession                 >= 0.9
                 , text                          >= 0.11       && < 1.2
                 , template-haskell
                 , hamlet                        >= 1.1        && < 1.3
                 , shakespeare-css               >= 1.0        && < 1.2
                 , shakespeare-js                >= 1.2        && < 1.4
                 , shakespeare-text              >= 1.0        && < 1.2
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 2.1        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , conduit                       >= 1.0        && < 1.2
                 , http-conduit                  >= 2.0        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 2.1        && < 3.1
                 , filepath                      >= 1.3        && < 1.4
                 , filestore                     >= 0.5        && < 0.7
                 , utf8-string                   >= 0.3        && < 0.4
                 , blaze-html                    >= 0.7        && < 0.8
                 , blaze-markup                  >= 0.6        && < 0.7
                 , random                        >= 1.0        && < 1.1
                 , containers                    >= 0.4        && < 0.6
                 , pandoc                        >= 1.12       && < 1.14
                 , highlighting-kate             >= 0.5.0.6    && < 0.6
                 , xss-sanitize                  >= 0.3.2      && < 0.4
                 , yesod-newsfeed                >= 1.2        && < 1.3
                 , time                          >= 1.1        && < 1.5
                 , syb                           >= 0.3        && < 0.5
                 , directory                     >= 1.1        && < 1.3
                 , blaze-builder                 >= 0.3        && < 0.4
                 , pandoc-types                  >= 1.12       && < 1.13
                 , HTTP                          >= 4000.2     && < 4000.3

    ghc-options:  -Wall -threaded -fno-warn-unused-do-bind

executable gitit2
    main-is:    gitit2.hs
    hs-source-dirs: src
    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.2        && < 1.3
                 , yesod-static                  >= 1.2        && < 1.3
                 , yesod-auth                    >= 1.3        && < 1.4
                 , filestore                     >= 0.5        && < 0.7
                 , containers                    >= 0.4        && < 0.6
                 , yaml                          >= 0.8        && < 0.9
                 , bytestring                    >= 0.9        && < 1.0
                 , warp                          >= 2.1        && < 3.1
                 , text                          >= 0.11       && < 1.2
                 , filepath                      >= 1.3        && < 1.4
                 , directory                     >= 1.1        && < 1.3
                 , network                       >= 2.3        && < 2.6
                 , http-conduit                  >= 2.0        && < 2.2
                 , pandoc                        >= 1.12       && < 1.14
                 , pandoc-types                  >= 1.12       && < 1.13
                 , syb                           >= 0.3        && < 0.5
                 , gitit2
                 , utf8-string                   >=0.3.7
    ghc-options:  -Wall -threaded -fno-warn-unused-do-bind
    if flag(executable)
       buildable:  True
    else
       buildable:  False
