name:              gitit2
version:           0.0.0
license:           GPL
license-file:      LICENSE
author:            John MacFarlane
maintainer:        John MacFarlane
synopsis:          Next-generation version of gitit wiki server.
description:       A reimplementation of gitit in Yesod.  This is
                   a work in progress: many of gitit's features
                   are not yet implemented.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://gitit.net
data-files:        README.markdown
                   messages/en.msg
                   static/favicon.ico
                   static/robots.txt
                   static/js/bootstrap.min.js
                   static/js/jquery-1.7.2.min.js
                   static/js/jquery-ui-1.8.21.custom.min.js
                   static/img/logo.png
                   static/img/icons/feed.png
                   static/img/icons/folder.png
                   static/img/icons/page.png
                   static/img/glyphicons-halflings.png
                   static/img/glyphicons-halflings-white.png
                   static/css/custom.css
                   static/css/bootstrap.min.css
                   static/css/highlighting.css
                   static/css/print.css
                   static/css/screen.css
                   settings.yaml
                   data/FrontPage.page
                   data/Help.page
                   data/markup.Markdown
                   data/markup.RST
                   data/markup.HTML
                   data/markup.LaTeX
                   data/post-update
Source-repository head
  type:            git
  location:        git://github.com/jgm/gitit2.git

flag executable
  description:   Build the gitit executable.
  default:       True

flag debian-jessie
  description: Use build dependencies available in Debian Jessie
  default: False
  manual: True

library
    exposed-modules: Network.Gitit2
                     Network.Gitit2.Foundation
                     Network.Gitit2.WikiPage
                     Network.Gitit2.Page

    other-modules: Network.Gitit2.Cache
                   Network.Gitit2.Handler.Atom
                   Network.Gitit2.Handler.Category
                   Network.Gitit2.Handler.Delete
                   Network.Gitit2.Handler.Diff
                   Network.Gitit2.Handler.Edit
                   Network.Gitit2.Handler.History
                   Network.Gitit2.Handler.Index
                   Network.Gitit2.Handler.Random
                   Network.Gitit2.Handler.Search
                   Network.Gitit2.Handler.Upload
                   Network.Gitit2.Handler.View
                   Network.Gitit2.Helper
                   Network.Gitit2.Import

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.2        && < 1.5
                 , yesod-static                  >= 1.2        && < 1.6
                 , yesod-core                    >= 1.2        && < 1.5
                 , yesod-form                    >= 1.3        && < 1.5
                 , bytestring                    >= 0.9        && < 0.11
                 , clientsession                 >= 0.9
                 , text                          >= 0.11       && < 1.3
                 , template-haskell
                 , hamlet                        >= 1.1        && < 1.3
                 , hjsmin                        >= 0.1        && < 0.3
                 , monad-control                 >= 0.3        && < 1.1
                 , wai-extra                     >= 2.1        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , conduit                       >= 1.0        && < 1.3
                 , http-conduit                  >= 2.0        && < 2.3
                 , directory                     >= 1.1        && < 1.4
                 , warp                          >= 2.1        && < 3.3
                 , filepath                      >= 1.3        && < 1.5
                 , filestore                     >= 0.5        && < 0.7
                 , utf8-string                   >= 0.3        && < 1.1
                 , blaze-html                    >= 0.7        && < 0.10
                 , blaze-markup                  >= 0.6        && < 0.9
                 , random                        >= 1.0        && < 1.2
                 , containers                    >= 0.4        && < 0.6
                 , pandoc                        >= 2.0        && < 2.1
                 , skylighting                   >= 0.4        && < 0.5
                 , xss-sanitize                  >= 0.3.2      && < 0.4
                 , yesod-newsfeed                >= 1.2        && < 1.7
                 , time                          >= 1.1        && < 1.7
                 , syb                           >= 0.3        && < 0.8
                 , directory                     >= 1.1        && < 1.4
                 , blaze-builder                 >= 0.3        && < 0.5
                 , pandoc-types                  >= 1.17.2     && < 1.18
                 , HTTP                          >= 4000.2     && < 4000.4
    if flag(debian-jessie)
      Build-Depends: shakespeare-css               >= 1.0        && < 1.2
                   , shakespeare-js                >= 1.2        && < 1.4
                   , shakespeare-text              >= 1.0        && < 1.2
    else
      Build-Depends: shakespeare                   >= 2.0        && < 2.1

    ghc-options:  -Wall -fno-warn-unused-do-bind

executable gitit2
    main-is:    gitit2.hs
    hs-source-dirs: src
    build-depends: base
                 , yesod
                 , yesod-static
                 , yesod-auth
                 , filestore
                 , containers
                 , yaml
                 , bytestring
                 , warp
                 , text
                 , filepath
                 , directory
                 , network
                 , http-conduit
                 , pandoc
                 , pandoc-types
                 , syb
                 , gitit2
                 , utf8-string
    ghc-options:  -Wall -threaded -fno-warn-unused-do-bind
    if flag(executable)
       buildable:  True
    else
       buildable:  False
    other-modules: ArgParser
                   Config
                   Error
